--- a/Endmer/Views/Araclar/YeniKullanici.cshtml
+++ b/Endmer/Views/Araclar/YeniKullanici.cshtml
@@ -11,7 +11,7 @@
             <div class="card mb-4">
 
                 <div class="card-header">
-                    <h6 class="text-center fs-4">Araç Bilgilerini Güncelle</h6>
+                    <h6 class="text-center fs-4">Yeni Kullancıya Aktar</h6>
                 </div>
 
                 <div class="card-body px-0 pt-0 pb-2">
