--- a/Endmer/Views/Zimmetlerim/Index.cshtml
+++ b/Endmer/Views/Zimmetlerim/Index.cshtml
@@ -65,7 +65,7 @@
                                         }
                                     }
                                     <tr>
-                                        <td><img src="@x.Tbl_Urunler.RESIM" class="img-fluid" /></td>
+                                        <td><img src="@x.Tbl_Urunler.RESIM" width="150" /></td>
                                         <td>@x.Tbl_Urunler.URUNADI</td>
                                         <td>@x.Tbl_Urunler.MARKA</td>
                                         <td>@x.Tbl_Urunler.MODEL</td>
