--- a/Endmer/Views/Zimmetler/Index.cshtml
+++ b/Endmer/Views/Zimmetler/Index.cshtml
@@ -44,6 +44,7 @@
                                     <th>Model</th>
                                     <th>Zimmet Sahibi</th>
                                     <th>Adet</th>
+                                    <th>Konum</th>
                                     <th>Tarih</th>
                                     <th colspan="1">İşlemler</th>
                                 </tr>
@@ -58,6 +59,7 @@
                                         <td>@x.Tbl_Urunler.MODEL</td>
                                         <td>@x.Tbl_Personel.AD @x.Tbl_Personel.SOYAD</td>
                                         <td>@x.ADET</td>
+                                        <td>@x.Tbl_Konumlar.KONUM</td>
                                         <td>@(((DateTime)x.TARIH).ToString("dd MMMM yyyy"))</td>
                                         <td>@Html.ActionLink("Sil", "ZimmetSil", new { id = x.ID }, new { @class = "btn btn-danger", onclick = "return confirm('Silmek İstediğinize Emin Misiniz?')" })</td>
                                     </tr>
