--- a/Endmer/Views/Urunler/Index.cshtml
+++ b/Endmer/Views/Urunler/Index.cshtml
@@ -48,6 +48,7 @@
                                     <th>Barkod</th>
                                     <th>Konum</th>
                                     <th>Adet</th>
+                                    <th>Arızalı</th>
                                     <th colspan="3">İşlemler</th>
                                 </tr>
                             </thead>
@@ -63,6 +64,7 @@
                                         <td>@x.BARKODNO</td>
                                         <td>@x.Tbl_Konumlar.KONUM</td>
                                         <td>@x.ADET</td>
+                                        <td>@x.ARIZALIADET</td>
                                         <td><a href="/Urunler/UrunDetay/@x.ID" class="btn btn-primary">Detay</a></td>
                                         <td>@Html.ActionLink("Sil", "UrunSil", new { id = x.ID }, new { @class = "btn btn-danger", onclick = "return confirm('Silmek İstediğinize Emin Misiniz?')" })</td>
                                         <td><a href="/Urunler/UrunGuncelle/@x.ID" class="btn btn-success">Güncelle</a></td>
