--- a/Endmer/Views/Zimmetlerim/Index.cshtml
+++ b/Endmer/Views/Zimmetlerim/Index.cshtml
@@ -43,8 +43,9 @@
                                     <th>Marka</th>
                                     <th>Model</th>
                                     <th>Adet</th>
+                                    <th>Arızalı</th>
                                     <th>Durum</th>
-                                    <th colspan="1">İşlemler</th>
+                                    <th colspan="2">İşlemler</th>
                                 </tr>
                             </thead>
                             @foreach (var x in Model)
@@ -70,8 +71,10 @@
                                         <td>@x.Tbl_Urunler.MARKA</td>
                                         <td>@x.Tbl_Urunler.MODEL</td>
                                         <td>@x.ADET</td>
+                                        <td>@x.ARIZALIADET</td>
                                         <td><span class="@color">@x.ONAYMESAJ</span></td>
                                         <td><a href="/Zimmetlerim/Aktar/@x.ID" class="btn btn-primary">Aktar</a></td>
+                                        <td><a href="/Zimmetlerim/Guncelle/@x.ID" class="btn btn-success">Güncelle</a></td>
                                     </tr>
                                 </tbody>
                             }
