Aracın başka kullanıcıya zimmet aktarımı işlemi eklendi.

--- a/Endmer/Views/Araclar/AracDetay.cshtml
+++ b/Endmer/Views/Araclar/AracDetay.cshtml
@@ -18,7 +18,7 @@
                         <table class="table table-hover align-items-center mb-0">
                             <thead align="center">
                                 <tr>
-                                    <th>Aktif Kullanıcı</th>
+                                    <th>Kullanıcı</th>
                                     <th colspan="2">İŞLEMLER</th>
                                 </tr>
                             </thead>
