--- a/Endmer/Views/Araclar/Index.cshtml
+++ b/Endmer/Views/Araclar/Index.cshtml
@@ -41,6 +41,7 @@
                                     <th>Resim</th>
                                     <th>Marka - Model</th>
                                     <th>Plaka</th>
+                                    <th>Kullanıcı</th>
                                     <th>KM</th>
                                     <th>Lokasyon</th>
                                     <th colspan="3">İşlemler</th>
@@ -53,6 +54,7 @@
                                         <td><img src="@x.RESIM" width="150" /></td>
                                         <td>@x.MARKA</td>
                                         <td>@x.PLAKA</td>
+                                        <td>@x.Tbl_Personel.AD @x.Tbl_Personel.SOYAD</td>
                                         <td>@x.KM</td>
                                         <td>@x.Tbl_Konumlar.KONUM</td>
                                         <td><a href="/Araclar/AracDetay/@x.ID" class="btn btn-primary">Detay</a></td>
