--- a/Endmer/Views/Araclar/Kayitlar.cshtml
+++ b/Endmer/Views/Araclar/Kayitlar.cshtml
@@ -18,8 +18,8 @@
                         <table class="table table-hover align-items-center mb-0">
                             <thead align="center">
                                 <tr>
-                                    @*<th>Teslim Eden</th>
-                                    <th>Teslim Alan</th>*@
+                                    <th>Teslim Eden</th>
+                                    <th>Teslim Alan</th>
                                     <th>KM</th>
                                     <th>Lokasyon</th>
                                 </tr>
@@ -28,8 +28,8 @@
                             {
                                 <tbody align="center">
                                     <tr>
-                                        @*<td>@x.Tbl_Personel.AD @x.Tbl_Personel.SOYAD</td>*@
-                                        @*<td>@x.Tbl_Personel1.AD @x.Tbl_Personel1.SOYAD</td>*@
+                                        <td>@x.Tbl_Personel.AD @x.Tbl_Personel.SOYAD</td>
+                                        <td>@x.Tbl_Personel1.AD @x.Tbl_Personel1.SOYAD</td>
                                         <td>@x.KM</td>
                                         <td>@x.Tbl_Konumlar.KONUM</td>
                                     </tr>
