--- a/Endmer/Views/Konumlar/Index.cshtml
+++ b/Endmer/Views/Konumlar/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Endmer.Models.Entity
 @using PagedList
 @using PagedList.Mvc
-@model PagedList.IPagedList<Tbl_Kategoriler>
+@model PagedList.IPagedList<Tbl_Konumlar>
 
 @{
     ViewBag.Title = "Index";
@@ -14,13 +14,13 @@
             <div class="card mb-4">
 
                 <div class="card-header">
-                    <h6 class="text-center fs-4">Kategoriler</h6>
+                    <h6 class="text-center fs-4">Konumlar</h6>
                 </div>
 
                 <div class="row">
                     <div class="col">
                         <div class="float-start ms-3">
-                            <a href="/Kategoriler/KategoriEkle" class="btn btn-info">Yeni Kategori Ekle</a>
+                            <a href="/Konumlar/KonumEkle" class="btn btn-info">Yeni Konum Ekle</a>
                         </div>
 
                         <div class="float-end me-3">
@@ -38,7 +38,7 @@
                         <table class="table table-hover align-items-center mb-0">
                             <thead align="center">
                                 <tr>
-                                    <th>Kategori</th>
+                                    <th>Konum</th>
                                     <th colspan="3">İşlemler</th>
                                 </tr>
                             </thead>
@@ -46,10 +46,9 @@
                             {
                                 <tbody align="center">
                                     <tr>
-                                        <td>@x.KATEGORIADI</td>
-                                        <td><a href="/Kategoriler/KategoriGuncelle/@x.ID" class="btn btn-success">Güncelle</a></td>
+                                        <td>@x.KONUM</td>
+                                        <td><a href="/Konumlar/KonumGuncelle/@x.ID" class="btn btn-success">Güncelle</a></td>
                                         <td>@Html.ActionLink("Sil", "KategoriSil", new { id = x.ID }, new { @class = "btn btn-danger", onclick = "return confirm('Silmek İstediğinize Emin Misiniz?')" })</td>
-                                        <td><a href="/Kategoriler/Urunler/@x.ID" class="btn btn-primary">Ürünler</a></td>
                                     </tr>
                                 </tbody>
                             }
@@ -66,6 +65,6 @@
 
 
 <script>
-    var kategoriler = document.getElementById('kategoriler');
-    kategoriler.classList.add('active');
+    var konumlar = document.getElementById('konumlar');
+    konumlar.classList.add('active');
 </script>
