--- a/Endmer/Views/Shared/_Layout.cshtml
+++ b/Endmer/Views/Shared/_Layout.cshtml
@@ -100,6 +100,15 @@
                     </li>
 
                     <li class="nav-item">
+                        <a id="konumlar" class="nav-link " href="/Konumlar/Index">
+                            <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                                <i class="ni ni-map-big text-primary text-sm opacity-10"></i>
+                            </div>
+                            <span class="nav-link-text ms-1">Konumlar</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
                         <a id="personel" class="nav-link " href="/Personel/Index">
                             <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                                 <i class="ni ni-user-run text-success text-sm opacity-10"></i>
@@ -163,7 +172,7 @@
                     </div>
                     <ul class="navbar-nav  justify-content-end">
                         <li class="nav-item d-flex align-items-center">
-                            <a href="javascript:;" class="nav-link text-white font-weight-bold px-0">
+                            <a href="/Profil/Index/" class="nav-link text-white font-weight-bold px-0">
                                 <i class="fa fa-user me-sm-1"></i>
                                 <span class="d-sm-inline d-none">@Session["AD"] @Session["SOYAD"]</span>
                             </a>
