Personel konumları için dropdown eklendi.

--- a/Endmer/Views/Personel/Index.cshtml
+++ b/Endmer/Views/Personel/Index.cshtml
@@ -67,7 +67,7 @@
                                         <td>@x.AD</td>
                                         <td>@x.SOYAD</td>
                                         <td>@x.Tbl_Departmanlar.DEPARTMAN</td>
-                                        <td>@x.LOKASYON</td>
+                                        <td>@x.Tbl_Konumlar.KONUM</td>
                                         <td>@role</td>
                                         <td><a href="/Personel/PersonelGuncelle/@x.ID" class="btn btn-success">Güncelle</a></td>
                                         <td>@Html.ActionLink("Sil", "PersonelSil", new { id = x.ID }, new { @class = "btn btn-danger", onclick = "return confirm('Personeli Silmek İstediğinize Emin Misiniz?')" })</td>
