--- a/Endmer/Views/Personel/PersonelEkle.cshtml
+++ b/Endmer/Views/Personel/PersonelEkle.cshtml
@@ -40,7 +40,7 @@
 
                                     <div class="col-sm-12 col-md-6 col-lg-6">
                                         <label class="form-label">Lokasyon</label>
-                                        <input type="text" class="form-control" name="LOKASYON" placeholder="Lokasyon.." required />
+                                        @Html.DropDownListFor(x => x.Tbl_Konumlar.ID, (List<SelectListItem>)ViewBag.Location, new { @class = "form-select" })
                                     </div>
                                 </div>
 
