--- a/Endmer/Views/Shared/_Layout.cshtml
+++ b/Endmer/Views/Shared/_Layout.cshtml
@@ -172,7 +172,7 @@
                     </div>
                     <ul class="navbar-nav  justify-content-end">
                         <li class="nav-item d-flex align-items-center">
-                            <a href="/Profil/Index/" class="nav-link text-white font-weight-bold px-0">
+                            <a href="/Profil/Index/@Session["ID"]" class="nav-link text-white font-weight-bold px-0">
                                 <i class="fa fa-user me-sm-1"></i>
                                 <span class="d-sm-inline d-none">@Session["AD"] @Session["SOYAD"]</span>
                             </a>
@@ -189,6 +189,11 @@
                         <li class="nav-item px-3 d-flex align-items-center">
                             <a href="javascript:;" class="nav-link text-white p-0">
                                 <i class="fa fa-cog fixed-plugin-button-nav cursor-pointer"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item d-flex align-items-center">
+                            <a href="/Login/Logout" class="nav-link text-white p-0">
+                                <i class="fa-solid fa-arrow-right-from-bracket"></i>
                             </a>
                         </li>
                     </ul>
