404 hata sayfası ve kontrolü eklendi.

--- a/Endmer/Views/Login/Index.cshtml
+++ b/Endmer/Views/Login/Index.cshtml
@@ -9,8 +9,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="apple-touch-icon" sizes="76x76" href="~/template/assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="~/template/assets/img/favicon.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="~/template/logo.ico">
+    <link rel="icon" type="image/png" href="~/template/logo.ico">
     <title>
         Login - Endmer Endüstri Merkezi
     </title>
