--- a/Endmer/Views/Shared/_Layout.cshtml
+++ b/Endmer/Views/Shared/_Layout.cshtml
@@ -5,8 +5,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="apple-touch-icon" sizes="76x76" href="~/template/assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="~/template/assets/img/favicon.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="~/template/logo.ico">
+    <link rel="icon" type="image/png" href="~/template/logo.ico">
     <title>
         Endmer | Endüstri Merkezi
     </title>
@@ -34,7 +34,7 @@
         <div class="sidenav-header">
             <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
             <a class="navbar-brand m-0 text-center" href=" https://demos.creative-tim.com/argon-dashboard/pages/dashboard.html " target="_blank">
-                <img src="~/template/assets/img/logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
+                <img src="~/template/logo.png" class="navbar-brand-img h-100" alt="main_logo">
                 Endmer Endüstri Merkezi
             </a>
         </div>
